# coin-game2

./: Anchor.toml  README.md  coin-game2 copy.ts  id.json  package-lock.json  package.json
programs/coin-game2/: Cargo.toml
programs/coin-game2/src/: errors.rs  lib.rs
programs/coin-game2/src/game/: bet.rs  mod.rs  play.rs  state.rs
programs/coin-game2/src/reward_distributor/: init_reward_distributor.rs  mod.rs  reclaim_funds.rs  state.rs
programs/coin-game2/src/reward_entry/: claim_rewards.rs  init_reward_entry.rs  mod.rs  state.rs
tests/: coin-game2.ts
